--- a/RESTCountriesConsole/RESTCountriesConsole/RESTCountriesConsole.csproj
+++ b/RESTCountriesConsole/RESTCountriesConsole/RESTCountriesConsole.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RESTCountriesSharp" Version="1.0.0" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.47.0" />
+  </ItemGroup>
+
 </Project>
