Adjust lunchSettings.json to only call the get command without parameters.

--- a/RESTCountriesConsole/RESTCountriesConsole/Properties/launchSettings.json
+++ b/RESTCountriesConsole/RESTCountriesConsole/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RESTCountriesConsole": {
       "commandName": "Project",
-      "commandLineArgs": "get fullname -p germany"
+      "commandLineArgs": "get"
     }
   }
 }
